# GPU-SimplePIR

./: .gitignore  README.md
eval/: gen_answer_matrix_table.sh
eval/dimensions/: main.go
gpu/: CMakeLists.txt  README.md  cutlass_bridge.cu  cutlass_bridge.h  matmul_packed_gpu.cu  matmul_packed_gpu.h  naive_simplepir.cu  naive_simplepir.h
pir/: cutlass_persist.go  cutlass_persist_test.go  cutlass_server_bench_test.go  double_pir.go  matmul_backend_cpu.go  matmul_backend_cutlass.go  matmul_cutlass_resident_hook.go  matmul_cutlass_test.go  matmul_cutlass_verify.go  matmul_packed_gpu_hook.go  matrix.go  naive_gpu_e2e.go  naive_gpu_e2e_bench_test.go  online_answer_only_bench_test.go  online_server_e2e_bench_test.go  online_server_gpu_test.go  packed_gpu_timed.go  packed_gpu_timed_bench_test.go  simple_pir.go
